--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -1,54 +1,71 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Página de Perfil </title>
-  <link rel="stylesheet" type="text/css" href="../css/style.css">
-  <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Perfil</title>
+    <link rel="stylesheet" href="/views/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="/views/js/script.js"></script>
 </head>
 <body>
-  <header class="header">
-    <div class="header-left"  onclick="operateNav()">
-      <img class="logo-image" src="../img/logo-da-empresa.png">
-      <p class="hamburguer-menu-image">&#9776;</p> 
-      <div class="vertical-decoration-line"></div>
+    <header class="header">
+        <div class="header-left" onclick="openNav()">
+          <img class="logo-image" src="../img/logo-da-empresa.png">
+          <p class="hamburguer-menu-image">&#9776;</p> 
+          <div class="vertical-decoration-line"></div>
+        </div>
+        <div class="header-right" id="headerRight">
+          <p id="dropdownArrow" class="dropdown-arrow">&#11167</p>
+          <img class="header-profile-picture" src="/views/img/conta1.jpg">
+          <h2 class="header-profile-name"> Zeca Figueiredo </h2>
+        </div>
+    </header>
+
+  <div class="profile-container">
+    <div class="card">
+      <img class="perfil-profile-picture" src="/views/img/conta1.jpg" alt="Zeca" >
+      <h1>Zeca Figueredo</h1>
+      <p>Meninos do Lago</p>
+      <div style="margin: 24px 0;">
+        <a href="#"><i class="fa fa-dribbble"></i></a> 
+        <a href="#"><i class="fa fa-twitter"></i></a>  
+        <a href="#"><i class="fa fa-linkedin"></i></a>  
+        <a href="#"><i class="fa fa-facebook"></i></a> 
+      </div>
+
     </div>
-    <div class="header-right" id="headerRight" onclick="operateDrop()">
-      <p id="dropdownArrow" class="dropdown-arrow">&#11167</p>
-      <img class="header-profile-picture" src="../img/conta1.jpg">
-      <h2 class="header-profile-name"> Zeca Figueiredo </h2>
-    </div>
-  </header>
-  <div id="sidebarContainer" class="container-sidebar">
-    <div class="sidebar-element" id="sidebarElement">
-      <a class="sidebar-element__anchor" href="telaTimeline.html"> TIMELINE </a>
-    </div>
-    <div class="sidebar-element" id="sidebarElement">
-      <a class="sidebar-element__anchor" href="telaTimeline.html"> TIMELINE </a>
-    </div>
-    <div class="sidebar-element" id="sidebarElement">
-      <a class="sidebar-element__anchor" href="telaTimeline.html"> TIMELINE </a>
-    </div>
-    <div class="sidebar-element" id="sidebarElement">
-      <a class="sidebar-element__anchor" href="telaTimeline.html"> TIMELINE </a>
-    </div>
+    <div class="profile-info">
+      <div>
+        <h2>Informação do Aluno</h2>
+        <p><strong>Nome Completo:</strong> Zeca Figueredo Junior Senior</p>
+        <p><strong>Email:</strong> Zecaburguer@gemail.com</p>
+        <p><strong>Telefone:</strong> (11) 99999-9999</p>
+        <p><strong>Curso:</strong> Meninos do Lago</p> 
+        <p><strong>Sobre Mim:</strong><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt 
+          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <hr class="separation-line">
+      </div>
+      <div class="area-btns">
+        <a href="telaAnamnese.html" class="btn-perfil">Teste de Anamnese</a>
+      </div>
+      <div class="area-btns">
+        <a href="" class="btn-perfil">Resultados de Anamnese</a>
+      </div>
   </div>
-  <div id="dropdownMenuProfile" class="dropdown-menu">
-    <div class="dropdown-menu__element" id="dropdownElement">
-      <img src="../img/user.svg">
-      <p> Perfil </p>
-    </div>
-    <div class="dropdown-menu__element" id="dropdownElement">
-      <img src="../img/log-out.svg">
-      <p> Logout </p>
-    </div>
-  <main>
+</div>
+    
 
-  </main>
-
-  
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="../js/script.js"></script>
+    <footer class="footer-padrao">
+      <p>&copy; 2023 - Todos os direitos reservados</p>
+        <p>Entre em contato pelo e-mail: contato@exemplo.com</p>
+        <p><a>Termos de uso</a></p>
+        <p><a>Política de privacidade</a></p>
+        <p><a>Sobre nós</a></p>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/views/js/script.js"></script>
 </body>
 </html>
