--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -20,18 +20,40 @@
           <h2 class="header-profile-name"> Zeca Figueiredo </h2>
         </div>
     </header>
-    <div id="sidebarContainer" class="container-sidebar">
-      <div class="sidebar-element" id="sidebarElement">
-        <a class="sidebar-element__anchor" href="telaTimeline.html"> TIMELINE </a>
+    <div id="mySidebar" class="sidebar">
+      <a href="../../index.html">Portal</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
       </div>
-      <div class="sidebar-element" id="sidebarElement">
-        <a class="sidebar-element__anchor" href="telaTimeline.html"> TIMELINE </a>
+      <a href="#">Galeria</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
       </div>
-      <div class="sidebar-element" id="sidebarElement">
-        <a class="sidebar-element__anchor" href="telaTimeline.html"> TIMELINE </a>
+      <a href="#">Horário de Ônibus</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
       </div>
-      <div class="sidebar-element" id="sidebarElement">
-        <a class="sidebar-element__anchor" href="telaTimeline.html"> TIMELINE </a>
+      <a href="#">Resultados Esportivos</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
+      </div>
+      <a href="#">Biblioteca</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
+      </div>
+      <a href="#">Tomadas de Preço</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
+      </div>
+      <a href="#">Ouvidoria</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
+      </div>
+      <a href="#">Relatórios</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
+      </div>
+      <a href="#">Programas</a>
       </div>
     </div>
     <div id="dropdownMenuProfile" class="dropdown-menu">
