--- a/views/css/style.css
+++ b/views/css/style.css
@@ -304,43 +304,51 @@ body {
 
 /*------------------------------------------------------------*/
 /* sidebar */
-
-.container-sidebar {
-  display: flex;
-  height: 100%;
-  position: fixed;
-  width: 0px;
-  transition: 0.05s;
+.sidebar {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
   top: 0;
   left: 0;
-  background-color: #3d3d3d;
-  padding-top: 200px;
+  background-color: #f4f4f4; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+  box-shadow: 0px 10px 10px #a5a5a5;
+  border-left: 1px solid rgb(156, 156, 156);
 }
 
-.close-sidebar {
-  right: 0;
-  margin-right: 40px;
-  margin-bottom: 40px;
-  margin-left: 90%;
-  color: #ffa114;
-  text-decoration: 0;
+/* The sidebar links */
+.sidebar a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: rgb(255, 149, 28);
+  display: block;
+  transition: 0.3s;
 }
 
-.sidebar-element {
-  color: #c0faff;
-  width: 100%;
-  height: 10%;
+.decoration-horizontal-container {
   display: flex;
-  flex: 1;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  visibility: hidden;
-  transition: 0.05s;
 }
 
-.sidebar-element__anchor {
-  flex: 1;
+.decoration-horizontal-line {
+  border-bottom: 1px solid rgb(255, 149, 28);
+  width: 90%;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidebar a:hover {
+  color: #000000;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidebar {padding-top: 15px;}
+  .sidebar a {font-size: 18px;}
 }
 
 .header {
