--- a/views/css/style.css
+++ b/views/css/style.css
@@ -31,7 +31,7 @@ body {
   padding-top: 10vh;
   padding-right: 0;
   padding-left: 0;
-  padding-bottom: 0;
+  padding-bottom: 0.1vh;
   font-family: 'Roboto', 'sans-sariff';
   background-color: rgb(239, 239, 231);
 }
@@ -39,6 +39,8 @@ body {
 .flex-main {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .grid-main {
@@ -683,10 +685,10 @@ td.missed-col {
 .table-container{
   max-width: 70%;
   overflow-x: auto;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   height: 70vh;
-  margin: 0;
+  margin-top: 3vh;
 }
 
 /* Set border-spacing for the entire table (including th) */
