--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -95,6 +95,9 @@
       <div class="area-btns">
         <a href="telaAnamnese.html" class="btn-perfil">Teste de Anamnese</a>
       </div>
+      <div class="area-btns">
+        <a href="telaChamada.html" class="btn-perfil">Teste Chamada</a>
+      </div>
 
   </div>
 </div>
