--- a/views/paginas/telaChamada.html
+++ b/views/paginas/telaChamada.html
@@ -9,34 +9,63 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-left" onclick="openNav()">
-          <img class="logo-image" src="../img/logo-da-empresa.png">
+        <div class="header-left" onclick="operateNav()">
+          <img class="logo-image" src="/views/img/logo-da-empresa.png">
           <p class="hamburguer-menu-image">&#9776;</p> 
           <div class="vertical-decoration-line"></div>
         </div>
-        <div class="header-right" id="headerRight">
+        <div class="header-right" id="headerRight" onclick="operateDrop()">
           <p id="dropdownArrow" class="dropdown-arrow">&#11167</p>
-          <img class="header-profile-picture" src="../img/conta1.jpg">
+          <img class="header-profile-picture" src="/views/img/conta1.jpg">
           <h2 class="header-profile-name"> Zeca Figueiredo </h2>
         </div>
-        <div id="sidebarContainer" class="container-sidebar hidden">
-            <a href="javascript:void(0)" id="closeAnchor" class="close-sidebar" onClick="closeNav()">&#10006</a>
-            <div class="sidebar-element">
-              <a class="sidebar-element__anchor" href="telaTimeline.html"> TIMELINE </a>
-            </div>
-          <div id="dropdownMenuProfile" class="dropdown-menu" style="display: none">
-            <div class="dropdown-menu__element">
-              <img src="../img/user.svg">
-              <p> Perfil </p>
-            </div>
-            <div class="dropdown-menu__element">
-              <img src="../img/log-out.svg">
-              <p> Logout </p>
-            </div>
-            </div>
-        </div>
     </header>
-      
+    <div id="mySidebar" class="sidebar">
+      <a href="../index.html">Portal</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
+      </div>
+      <a href="#">Galeria</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
+      </div>
+      <a href="#">Horário de Ônibus</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
+      </div>
+      <a href="#">Resultados Esportivos</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
+      </div>
+      <a href="#">Biblioteca</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
+      </div>
+      <a href="#">Tomadas de Preço</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
+      </div>
+      <a href="#">Ouvidoria</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
+      </div>
+      <a href="#">Relatórios</a>
+      <div class="decoration-horizontal-container">
+        <div class="decoration-horizontal-line"></div>
+      </div>
+      <a href="#">Programas</a>
+      </div>
+    </div>
+    <div id="dropdownMenuProfile" class="dropdown-menu">
+      <div class="dropdown-menu__element" id="dropdownElement">
+        <a href="/views/paginas/TelaPerfil.html"><img src="/views/img/user.svg"></a>
+        <p> Perfil </p>
+      </div>
+      <div class="dropdown-menu__element" id="dropdownElement">
+        <a href="../index.html"><img src="/views/img/log-out.svg"></a>
+        <p> Logout </p>
+      </div>
+    </div>
     <main class="flex-main">
       <div class="table-container">
         <table class="table-chamada">
