--- a/views/paginas/telaLogin.html
+++ b/views/paginas/telaLogin.html
@@ -10,29 +10,63 @@
 </head>
 <body class="background">
   <header class="header">
-    <div class="header-left" onclick="openNav()">
+    <div class="header-left" onclick="operateNav()">
       <img class="logo-image" src="/views/img/logo-da-empresa.png">
-      <p class="hamburguer-menu-image">&#9776;</p>
-
-      <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">Item 1</a>
-        <a href="#">Item 2</a>
-        <a href="#">Item 3</a>
-      </div>
-    </div>
-    <div class="header-middle">
+      <p class="hamburguer-menu-image">&#9776;</p> 
       <div class="vertical-decoration-line"></div>
-      <div class="container-searchbar">
-        <button class="header-searchbar-button"><img src="/views/img/search.svg"></button>
-        <input class="header-searchbar" placeholder="Buscar..." type="text">
-      </div>
     </div>
-    <div class="header-right">
+    <div class="header-right" id="headerRight" onclick="operateDrop()">
+      <p id="dropdownArrow" class="dropdown-arrow">&#11167</p>
       <img class="header-profile-picture" src="/views/img/conta1.jpg">
       <h2 class="header-profile-name"> Zeca Figueiredo </h2>
     </div>
-  </header>
+</header>
+<div id="mySidebar" class="sidebar">
+  <a href="/index.html">Portal</a>
+  <div class="decoration-horizontal-container">
+    <div class="decoration-horizontal-line"></div>
+  </div>
+  <a href="#">Galeria</a>
+  <div class="decoration-horizontal-container">
+    <div class="decoration-horizontal-line"></div>
+  </div>
+  <a href="#">Horário de Ônibus</a>
+  <div class="decoration-horizontal-container">
+    <div class="decoration-horizontal-line"></div>
+  </div>
+  <a href="#">Resultados Esportivos</a>
+  <div class="decoration-horizontal-container">
+    <div class="decoration-horizontal-line"></div>
+  </div>
+  <a href="#">Biblioteca</a>
+  <div class="decoration-horizontal-container">
+    <div class="decoration-horizontal-line"></div>
+  </div>
+  <a href="#">Tomadas de Preço</a>
+  <div class="decoration-horizontal-container">
+    <div class="decoration-horizontal-line"></div>
+  </div>
+  <a href="#">Ouvidoria</a>
+  <div class="decoration-horizontal-container">
+    <div class="decoration-horizontal-line"></div>
+  </div>
+  <a href="#">Relatórios</a>
+  <div class="decoration-horizontal-container">
+    <div class="decoration-horizontal-line"></div>
+  </div>
+  <a href="#">Programas</a>
+  </div>
+</div>
+<div id="dropdownMenuProfile" class="dropdown-menu">
+  <div class="dropdown-menu__element" id="dropdownElement">
+    <a href="/TelaPerfil.html"><img src="/views/img/user.svg"></a>
+    <p> Perfil </p>
+  </div>
+  <div class="dropdown-menu__element" id="dropdownElement">
+    <a href="/index.html"><img src="/views/img/log-out.svg"></a>
+    <p> Logout </p>
+  </div>
+</div>
     <main class="page">
         <form method="POST" class="formLogin">
             <h1>Login</h1>
