--- a/views/paginas/telaAnamnese.html
+++ b/views/paginas/telaAnamnese.html
@@ -171,7 +171,7 @@
       </div>
     </div>
     <main class="flex-main center-text">
-        <form class="form-identificacao">
+        <form class="form-identificacao" action="/views/paginas/telaPerfilAluno.html">
             <div class="form-section titulo-anamnese">
                 <h1>ANAMNESE</h1>
                 <h3>QUESTIONÁRIO SOBRE ESTADO DE SAÚDE</h3>
