--- a/views/paginas/telaLogin.html
+++ b/views/paginas/telaLogin.html
@@ -12,82 +12,25 @@
   <header class="header">
     <div class="header-left" onclick="operateNav()">
       <img class="logo-image" src="/views/img/logo-da-empresa.png">
-      <p class="hamburguer-menu-image">&#9776;</p> 
       <div class="vertical-decoration-line"></div>
     </div>
-    <div class="header-right" id="headerRight" onclick="operateDrop()">
-      <p id="dropdownArrow" class="dropdown-arrow">&#11167</p>
-      <img class="header-profile-picture" src="/views/img/conta1.jpg">
-      <h2 class="header-profile-name"> Zeca Figueiredo </h2>
-    </div>
 </header>
-<div id="mySidebar" class="sidebar">
-  <a href="/index.html">Portal</a>
-  <div class="decoration-horizontal-container">
-    <div class="decoration-horizontal-line"></div>
-  </div>
-  <a href="#">Galeria</a>
-  <div class="decoration-horizontal-container">
-    <div class="decoration-horizontal-line"></div>
-  </div>
-  <a href="#">Horário de Ônibus</a>
-  <div class="decoration-horizontal-container">
-    <div class="decoration-horizontal-line"></div>
-  </div>
-  <a href="#">Resultados Esportivos</a>
-  <div class="decoration-horizontal-container">
-    <div class="decoration-horizontal-line"></div>
-  </div>
-  <a href="#">Biblioteca</a>
-  <div class="decoration-horizontal-container">
-    <div class="decoration-horizontal-line"></div>
-  </div>
-  <a href="#">Tomadas de Preço</a>
-  <div class="decoration-horizontal-container">
-    <div class="decoration-horizontal-line"></div>
-  </div>
-  <a href="#">Ouvidoria</a>
-  <div class="decoration-horizontal-container">
-    <div class="decoration-horizontal-line"></div>
-  </div>
-  <a href="#">Relatórios</a>
-  <div class="decoration-horizontal-container">
-    <div class="decoration-horizontal-line"></div>
-  </div>
-  <a href="#">Programas</a>
-  </div>
-</div>
-<div id="dropdownMenuProfile" class="dropdown-menu">
-  <div class="dropdown-menu__element" id="dropdownElement">
-    <a href="/TelaPerfil.html"><img src="/views/img/user.svg"></a>
-    <p> Perfil </p>
-  </div>
-  <div class="dropdown-menu__element" id="dropdownElement">
-    <a href="/index.html"><img src="/views/img/log-out.svg"></a>
-    <p> Logout </p>
-  </div>
-</div>
-    <main class="page">
-        <form method="POST" class="formLogin">
-            <h1>Login</h1>
-            <p>Digite os seus dados de acesso no campo abaixo.</p>
-            <label for="email">E-mail</label>
-            <input type="email" placeholder="Digite seu e-mail" autofocus="true" />
-            <label for="password">Senha</label>  
-            <input type="password" placeholder="Digite sua senha" />
-            <a href="/views/paginas/telaEsqueci.html">Esqueci minha senha</a>
-            <a href="/views/paginas/telaCadastro.html">Não tenho conta</a>
-            <input type="submit" value="Acessar" class="btn" />
-        </form>
-      </main>
 
-      <footer class="footer-padrao">
-        <p>&copy; 2023 - Todos os direitos reservados</p>
-          <p>Entre em contato pelo e-mail: contato@exemplo.com</p>
-          <p><a>Termos de uso</a></p>
-          <p><a>Política de privacidade</a></p>
-          <p><a>Sobre nós</a></p>
-      </footer>
+<div class="background-image-container">
+    <main class="page">
+      <form class="formLogin" action="/views/paginas/telaPerfilAluno.html">
+        <h1>Login</h1>
+        <p>Digite os seus dados de acesso no campo abaixo.</p>
+        <label for="email">E-mail</label>
+        <input type="email" placeholder="Digite seu e-mail" autofocus="true" />
+        <label for="password">Senha</label>  
+        <input type="password" placeholder="Digite sua senha" required/>
+        <a href="/views/paginas/telaEsqueci.html">Esqueci minha senha</a>
+        <a href="/views/paginas/telaCadastro.html">Não tenho conta</a>
+        <input type="submit" value="Acessar" class="btn" />
+    </form>
+      </main>
+    </div>
     
 </body>
 </html>
